--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
 	<properties>
 		<java.version>22</java.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>itext-repo</id>
+			<url>https://repo.itextpdf.com/maven2</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -79,11 +86,24 @@
 <!--			<artifactId>itext7-core</artifactId>-->
 <!--			<version>1.3.1</version> &lt;!&ndash; Check for the latest version &ndash;&gt;-->
 <!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com.itextpdf</groupId>-->
+<!--			<artifactId>itext7-core</artifactId>-->
+<!--			<version>7.2.5</version> &lt;!&ndash; Or the latest available version &ndash;&gt;-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com.itextpdf</groupId>-->
+<!--			<artifactId>itext7-core</artifactId>-->
+<!--			<version>7.1.9</version> &lt;!&ndash; Try this version or any other available version &ndash;&gt;-->
+<!--		</dependency>-->
+
 		<dependency>
-			<groupId>com.itextpdf</groupId>
-			<artifactId>itext7-core</artifactId>
-			<version>7.2.4</version> <!-- Use the latest available version -->
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.6.0</version> <!-- Use the latest stable version -->
 		</dependency>
+
+
 
 
 	</dependencies>
