--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/efurnituredb
-#spring.datasource.username=springstudent
-#spring.datasource.password=springstudent
-#
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/efurnituredb
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
+spring.datasource.hikari.maximum-pool-size=10 
 
 server.port=9090
 spring.mail.host=smtp.gmail.com
@@ -19,8 +20,8 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 file.upload-dir=uploads/profile-pictures
 spring.messages.basename=messages
 
-spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:5432/efurnituredb
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:5432/efurnituredb
+#spring.datasource.username=${DATABASE_USERNAME}
+#spring.datasource.password=${DATABASE_PASSWORD}
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
