--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,30 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/efurnituredb
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
+#spring.datasource.url=jdbc:mysql://localhost:3306/efurnituredb
+#spring.datasource.username=springstudent
+#spring.datasource.password=springstudent
+#
+#spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.show-sql=false
+#spring.datasource.hikari.maximum-pool-size=10
+#server.port=${PORT:9090}
 
+# For local development, this will use the local database URL, username, and password
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/efurnituredb}
+spring.datasource.username=${DB_USERNAME:springstudent}
+spring.datasource.password=${DB_PASSWORD:springstudent}
+
+# Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
-spring.datasource.hikari.maximum-pool-size=10 
 
-server.port=9090
+# Connection Pool Settings
+spring.datasource.hikari.maximum-pool-size=10
+
+# Server Port (Render will override the local 9090 port using the PORT environment variable)
+server.port=${PORT:9090}
+
+
+
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=rushingacedrick@gmail.com
