Added postgres properties in  application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,13 @@
 #server.port=${PORT:9090}
 
 # For local development, this will use the local database URL, username, and password
-spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/efurnituredb}
-spring.datasource.username=${DB_USERNAME:springstudent}
-spring.datasource.password=${DB_PASSWORD:springstudent}
+#spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/efurnituredb}
+#spring.datasource.username=${DB_USERNAME:springstudent}
+#spring.datasource.password=${DB_PASSWORD:springstudent}
 
 # Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=false
+#spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.show-sql=false
 
 # Connection Pool Settings
 spring.datasource.hikari.maximum-pool-size=10
@@ -43,3 +43,13 @@ spring.messages.basename=messages
 #spring.datasource.password=${DATABASE_PASSWORD}
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
+
+# PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://dpg-ct6u8c52ng1s7397qd4g-a.oregon-postgres.render.com:5432/efurnituredb
+spring.datasource.username=efurnituredb_user
+spring.datasource.password=97cFilGpy1MvPXL5BEN6IKcevrwydZKc
+
+# JPA Configuration
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
