Added new postgres properties in  application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,11 +45,18 @@ spring.messages.basename=messages
 #spring.jpa.show-sql=true
 
 # PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://dpg-ct6u8c52ng1s7397qd4g-a.oregon-postgres.render.com:5432/efurnituredb
-spring.datasource.username=efurnituredb_user
-spring.datasource.password=97cFilGpy1MvPXL5BEN6IKcevrwydZKc
+#spring.datasource.url=jdbc:postgresql://dpg-ct6u8c52ng1s7397qd4g-a.oregon-postgres.render.com:5432/efurnituredb
+#spring.datasource.username=efurnituredb_user
+#spring.datasource.password=97cFilGpy1MvPXL5BEN6IKcevrwydZKc
+#
+## JPA Configuration
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA Configuration
+
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=org.postgresql.Driver
