Added railway db properties to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,21 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/efurnituredb
-#spring.datasource.username=springstudent
-#spring.datasource.password=springstudent
+#spring.datasource.username=root
+#spring.datasource.password=vPqloCwtWYlbokhFsgcRHlMRkaTCIiYn
 #
 #spring.jpa.hibernate.ddl-auto=validate
 #spring.jpa.show-sql=false
 #spring.datasource.hikari.maximum-pool-size=10
-#server.port=${PORT:9090}
 
-# For local development, this will use the local database URL, username, and password
-#spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/efurnituredb}
-#spring.datasource.username=${DB_USERNAME:springstudent}
-#spring.datasource.password=${DB_PASSWORD:springstudent}
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
+spring.datasource.username=root
+spring.datasource.password=vPqloCwtWYlbokhFsgcRHlMRkaTCIiYn
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Hibernate Configuration
-#spring.jpa.hibernate.ddl-auto=validate
-#spring.jpa.show-sql=false
-
-# Connection Pool Settings
-spring.datasource.hikari.maximum-pool-size=10
-
-# Server Port (Render will override the local 9090 port using the PORT environment variable)
+# Optional: Hibernate configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 server.port=${PORT:9090}
-
-
 
 
 spring.mail.host=smtp.gmail.com
@@ -37,26 +30,3 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 
 file.upload-dir=uploads/profile-pictures
 spring.messages.basename=messages
-
-#spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:5432/efurnituredb
-#spring.datasource.username=${DATABASE_USERNAME}
-#spring.datasource.password=${DATABASE_PASSWORD}
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-
-# PostgreSQL Database Configuration
-#spring.datasource.url=jdbc:postgresql://dpg-ct6u8c52ng1s7397qd4g-a.oregon-postgres.render.com:5432/efurnituredb
-#spring.datasource.username=efurnituredb_user
-#spring.datasource.password=97cFilGpy1MvPXL5BEN6IKcevrwydZKc
-#
-## JPA Configuration
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
