--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,13 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/efurnituredb
-#spring.datasource.username=root
-#spring.datasource.password=vPqloCwtWYlbokhFsgcRHlMRkaTCIiYn
-#
-#spring.jpa.hibernate.ddl-auto=validate
-#spring.jpa.show-sql=false
-#spring.datasource.hikari.maximum-pool-size=10
-
-spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
+spring.datasource.url=jdbc:mysql://autorack.proxy.rlwy.net:29507/railway
 spring.datasource.username=root
-spring.datasource.password=vPqloCwtWYlbokhFsgcRHlMRkaTCIiYn
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=DWAGZalzWQGyaJsRgyFNbCToUURUeYFE
 
-# Optional: Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=false
+spring.datasource.hikari.maximum-pool-size=10
+
+
 server.port=${PORT:9090}
 
 
