--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,12 @@
 	<properties>
 		<java.version>22</java.version>
 	</properties>
-	<repositories>
-		<repository>
-			<id>itext-repo</id>
-			<url>https://repo.itextpdf.com/maven2</url>
-		</repository>
-	</repositories>
+<!--	<repositories>-->
+<!--		<repository>-->
+<!--			<id>itext-repo</id>-->
+<!--			<url>https://repo.itextpdf.com/maven2</url>-->
+<!--		</repository>-->
+<!--	</repositories>-->
 
 	<dependencies>
 		<dependency>
