--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>17</java.version>
 	</properties>
 <!--	<repositories>-->
 <!--		<repository>-->
@@ -112,22 +112,17 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.11.0</version> <!-- Ensure compatibility with Java 21 -->
+				<version>3.8.1</version> <!-- Compatible with Java 17 -->
 				<configuration>
-					<source>21</source>
-					<target>21</target>
-					<release>21</release>
+					<source>17</source>
+					<target>17</target>
+					<release>17</release>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 
 
 </project>
